# imaging-plaza-fair-indicator-api

./: .env.dist  CHANGELOG.md  Dockerfile  README.md  data.ttl  pyproject.toml  requirements.txt
app/: entrypoint.sh  fairindicator.py  main.py  shapes.ttl
app/gui/: main.py
ci/: develop_watcher.sh  prod_watcher.sh
imaging_plaza_fair_indicator_api/: ImagingOntologyCombined.ttl  __init__.py  entrypoint.sh  fairindicator.py  main.py  shapes.ttl  test.json  test.py  test.ttl
imaging_plaza_fair_indicator_api/gui/: main.py
tests/: basic_indication.py
